--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "autoprefixer": "10.4.14",
     "eslint": "8.42.0",
     "eslint-config-next": "13.4.4",
+    "moment": "^2.29.4",
     "next": "13.4.1",
     "next-auth": "^4.22.1",
     "postcss": "8.4.24",
@@ -29,5 +30,8 @@
     "@types/node": "20.2.5",
     "@types/react": "18.2.8",
     "prisma": "^4.15.0"
+  },
+  "resolutions": {
+    "styled-components": "^5"
   }
 }
